chore(ci): testing workflow

--- a/.github/workflows/build-staging.yaml
+++ b/.github/workflows/build-staging.yaml
@@ -6,6 +6,9 @@ on:
       username:
         required: true
         type: string
+      build-args:
+        required: false
+        type: string
     secrets:
       PASSWORD:
         required: true
@@ -36,6 +39,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          build-args: ${{ inputs.build-args }}
           platforms: linux/arm64,linux/amd64
           push: true
           tags: ghcr.io/${{github.repository}}:main
