chore: updates frontend k8s resources

--- a/headless/prod/env.config-map.yaml
+++ b/headless/prod/env.config-map.yaml
@@ -12,11 +12,11 @@ data:
 
   DATABASE_HOST: 'postgresql-pooler.postgresql.svc'
   DATABASE_NAME: 'valuable_promo_prod'
-  DATABASE_USERNAME: 'valuable_promo_prod'
+  DATABASE_USERNAME: 'valuable_promo_prod_sql'
   DATABASE_SSL: 'false'
   DATABASE_DEBUG: 'false'
 
-  SCALEWAY_ACCESS_KEY_ID: 'SCWGBRX5PR11S70WKA28'
+  SCALEWAY_ACCESS_KEY_ID: 'SCWEBQF89FCQ8H6JHHDB'
   SCALEWAY_BUCKET: 'valuable-promo-headless-prod'
   SCALEWAY_ENDPOINT: 's3.nl-ams.scw.cloud'
 
