--- a/headless/staging/env.config-map.yaml
+++ b/headless/staging/env.config-map.yaml
@@ -12,11 +12,11 @@ data:
 
   DATABASE_HOST: 'postgresql-pooler.postgresql.svc'
   DATABASE_NAME: 'valuable_promo_staging'
-  DATABASE_USERNAME: 'valuable_promo_staging'
+  DATABASE_USERNAME: 'valuable_promo_staging_sql'
   DATABASE_SSL: 'false'
   DATABASE_DEBUG: 'false'
 
-  SCALEWAY_ACCESS_KEY_ID: 'SCWGBRX5PR11S70WKA28'
+  SCALEWAY_ACCESS_KEY_ID: 'SCWQ55BD5H8V85C8MZ5J'
   SCALEWAY_BUCKET: 'valuable-promo-headless-staging'
   SCALEWAY_ENDPOINT: 's3.nl-ams.scw.cloud'
 
