chore: uses skip-tls-verify

--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -40,3 +40,4 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}:${{ github.ref_name }}
           annotate-namespace: false
+          skip-tls-verify: true
