--- a/apps/headless/staging/image-automation.yaml
+++ b/apps/headless/staging/image-automation.yaml
@@ -6,43 +6,43 @@ metadata:
 spec:
   image: ghcr.io/valuable-promo/headless
   interval: 1m0s
----
-apiVersion: image.toolkit.fluxcd.io/v1beta2
-kind: ImagePolicy
-metadata:
-  name: valuable-promo-headless
-  namespace: valuable-promo-staging
-spec:
-  imageRepositoryRef:
-    name: valuable-promo-headless
-  filterTags:
-    pattern: '^main-[a-fA-F0-9]+-(?P<ts>.*)'
-    extract: '$ts'
-  policy:
-    numerical:
-      order: asc
----
-apiVersion: image.toolkit.fluxcd.io/v1beta1
-kind: ImageUpdateAutomation
-metadata:
-  name: valuable-promo-headless
-  namespace: valuable-promo-staging
-spec:
-  interval: 1m0s
-  sourceRef:
-    kind: GitRepository
-    name: valuable-promo
-  git:
-    checkout:
-      ref:
-        branch: main
-    commit:
-      author:
-        email: fluxcdbot@users.noreply.github.com
-        name: fluxcdbot
-      messageTemplate: '{{range .Updated.Images}}{{println .}}{{end}}'
-    push:
-      branch: main
-  update:
-    path: ./apps
-    strategy: Setters
+# ---
+# apiVersion: image.toolkit.fluxcd.io/v1beta2
+# kind: ImagePolicy
+# metadata:
+#   name: valuable-promo-headless
+#   namespace: valuable-promo-staging
+# spec:
+#   imageRepositoryRef:
+#     name: valuable-promo-headless
+#   filterTags:
+#     pattern: '^main-[a-fA-F0-9]+-(?P<ts>.*)'
+#     extract: '$ts'
+#   policy:
+#     numerical:
+#       order: asc
+# ---
+# apiVersion: image.toolkit.fluxcd.io/v1beta1
+# kind: ImageUpdateAutomation
+# metadata:
+#   name: valuable-promo-headless
+#   namespace: valuable-promo-staging
+# spec:
+#   interval: 1m0s
+#   sourceRef:
+#     kind: GitRepository
+#     name: valuable-promo
+#   git:
+#     checkout:
+#       ref:
+#         branch: main
+#     commit:
+#       author:
+#         email: fluxcdbot@users.noreply.github.com
+#         name: fluxcdbot
+#       messageTemplate: '{{range .Updated.Images}}{{println .}}{{end}}'
+#     push:
+#       branch: main
+#   update:
+#     path: ./apps
+#     strategy: Setters
