--- a/apps/headless/staging/headless.depl.yaml
+++ b/apps/headless/staging/headless.depl.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: valuable-promo-staging
   annotations:
     reloader.stakater.com/auto: 'true'
+    fluxcd.io/automated: 'true'
+    fluxcd.io/tag.headless: semver:^5.0
 spec:
   replicas: 1
   selector:
@@ -17,7 +19,7 @@ spec:
     spec:
       containers:
         - name: headless
-          image: ghcr.io/valuable-promo/headless:main # {"$imagepolicy": "valuable-promo-staging:valuable-promo-headless"}
+          image: ghcr.io/valuable-promo/headless:main
           imagePullPolicy: Always
           envFrom:
             - secretRef:
