--- a/apps/headless/staging/headless.depl.yaml
+++ b/apps/headless/staging/headless.depl.yaml
@@ -17,10 +17,36 @@ spec:
     spec:
       containers:
         - name: headless
-          image: ghcr.io/valuable-promo/headless:main # {"$imagepolicy": "valuable-promo-staging:valuable-promo-headless"}
+          image: ghcr.io/valuable-promo/headless:main-1b5743c-1683399717 # {"$imagepolicy": "valuable-promo-staging:valuable-promo-headless"}
           imagePullPolicy: Always
           envFrom:
             - secretRef:
                 name: headless-env
             - configMapRef:
                 name: headless-env
+---
+apiVersion: image.toolkit.fluxcd.io/v1beta2
+kind: ImageRepository
+metadata:
+  name: valuable-promo-headless
+  namespace: valuable-promo-staging
+spec:
+  image: ghcr.io/valuable-promo/headless
+  interval: 1m0s
+---
+apiVersion: image.toolkit.fluxcd.io/v1beta2
+kind: ImagePolicy
+metadata:
+  name: valuable-promo-headless
+  namespace: valuable-promo-staging
+spec:
+  imageRepositoryRef:
+    name: valuable-promo-headless
+  filterTags:
+    pattern: '^main-[a-fA-F0-9]+-(?P<ts>.*)'
+    extract: '$ts'
+  policy:
+    numerical:
+      order: asc
+---
+
