--- a/apps/headless/prod/headless.depl.yaml
+++ b/apps/headless/prod/headless.depl.yaml
@@ -17,9 +17,30 @@ spec:
     spec:
       containers:
         - name: headless
-          image: ghcr.io/valuable-promo/headless:v0.1.9
+          image: ghcr.io/valuable-promo/headless:v0.1.9 # {"$imagepolicy": "valuable-promo-prod:valuable-promo-headless"}
           envFrom:
             - secretRef:
                 name: headless-env
             - configMapRef:
                 name: headless-env
+---
+apiVersion: image.toolkit.fluxcd.io/v1beta2
+kind: ImageRepository
+metadata:
+  name: valuable-promo-headless
+  namespace: valuable-promo-prod
+spec:
+  image: ghcr.io/valuable-promo/headless
+  interval: 1m0s
+---
+apiVersion: image.toolkit.fluxcd.io/v1beta2
+kind: ImagePolicy
+metadata:
+  name: valuable-promo-headless
+  namespace: valuable-promo-prod
+spec:
+  imageRepositoryRef:
+    name: valuable-promo-headless
+  policy:
+    semver:
+      range: '>=0.1.0'
