--- a/apps/frontend/prod/frontend.depl.yaml
+++ b/apps/frontend/prod/frontend.depl.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-depl
-  namespace: valuable-promo-staging
+  namespace: valuable-promo-prod
   annotations:
     reloader.stakater.com/auto: 'true'
 spec:
