chore: switch to scaleway storage

--- a/apps/dbbackup/prod/config-map.yaml
+++ b/apps/dbbackup/prod/config-map.yaml
@@ -8,6 +8,7 @@ data:
   DB_PORT: '5432'
   DB_NAME: 'valuable_promo_prod'
   DB_USER: 'valuable_promo_prod_sql'
-  AWS_ACCESS_KEY_ID: 'AKIAZSXRTNLW6SXOQ5EU'
-  AWS_DEFAULT_REGION: 'eu-central-1'
+  AWS_ACCESS_KEY_ID: 'SCWEBQF89FCQ8H6JHHDB'
+  AWS_DEFAULT_REGION: 'nl-ams'
+  AWS_ENDPOINT_URL_S3: 'https://s3.nl-ams.scw.cloud'
   BUCKET_NAME: 'valuable-promo-db-backups'
