--- a/apps/dbbackup/staging/config-map.yaml
+++ b/apps/dbbackup/staging/config-map.yaml
@@ -8,6 +8,7 @@ data:
   DB_PORT: '5432'
   DB_NAME: 'valuable_promo_staging'
   DB_USER: 'valuable_promo_staging_sql'
-  AWS_ACCESS_KEY_ID: 'AKIAZSXRTNLW6SXOQ5EU'
-  AWS_DEFAULT_REGION: 'eu-central-1'
+  AWS_ACCESS_KEY_ID: 'SCWQ55BD5H8V85C8MZ5J'
+  AWS_DEFAULT_REGION: 'nl-ams'
+  AWS_ENDPOINT_URL_S3: 'https://s3.nl-ams.scw.cloud'
   BUCKET_NAME: 'valuable-promo-db-backups'
