fix: frontend staging fluxcd

--- a/apps/frontend/staging/kustomization.yaml
+++ b/apps/frontend/staging/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - config-map.yaml
   - sealed-secret.yaml
-  - depl.yaml
+  # - depl.yaml
   - service.yaml
   - ingress.yaml
