chore: updates frontend envs

--- a/apps/frontend/prod/config-map.yaml
+++ b/apps/frontend/prod/config-map.yaml
@@ -8,3 +8,4 @@ data:
   NEXT_PUBLIC_STORAGE_HOST: valuable-promo-headless-prod.s3.nl-ams.scw.cloud
   SITE_URL: https://valuable.promo
   SITE_NAME: Valuable Promo
+  NEXT_PUBLIC_PAGE_SIZE: '9'
