--- a/apps/gitops/staging/image-automation.yaml
+++ b/apps/gitops/staging/image-automation.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
-    name: valuable-promo
+    name: valuable-promo-infra
     namespace: flux-system
   git:
     checkout:
