--- a/apps/dbbackup/staging/cron-job.yaml
+++ b/apps/dbbackup/staging/cron-job.yaml
@@ -17,19 +17,7 @@ spec:
                 - name: data
                   mountPath: /backup
               args:
-                - pg_dump
-                - '-Fc'
-                - '-f'
-                - '/backup/$(DB_NAME).pgdump'
-                - '-Z'
-                - '9'
-                - '-v'
-                - '-h'
-                - '$(DB_HOST)'
-                - '-U'
-                - '$(DB_USER)'
-                - '-d'
-                - '$(DB_NAME)'
+                - pg_dump -h $(DB_HOST) -U $(DB_USER) $(DB_NAME) | gzip > /backup/$(DB_NAME).sql.gz
               envFrom:
                 - configMapRef:
                     name: dbbackup-env
@@ -45,7 +33,7 @@ spec:
               args:
                 - '-c'
                 - >
-                  aws s3 cp /backup/$(DB_NAME).pgdump s3://$(BUCKET_NAME)/$(DB_NAME)_$(date -u +%Y%m%d%H%M%S).pgdump
+                  aws s3 cp /backup/$(DB_NAME).sql.gz s3://$(BUCKET_NAME)/$(DB_NAME)_$(date -u +%Y%m%d%H%M%S).sql.gz
               envFrom:
                 - secretRef:
                     # Must contain AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION
