--- a/apps/production/gitops/image-update-automation.yaml
+++ b/apps/production/gitops/image-update-automation.yaml
@@ -8,7 +8,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: valuable-promo-infra
-    namespace: flux-system
+    namespace: valuable-promo-prod
   git:
     checkout:
       ref:
