--- a/apps/production/headless/depl.yaml
+++ b/apps/production/headless/depl.yaml
@@ -22,29 +22,35 @@ spec:
             runAsGroup: 1000
             runAsNonRoot: true
           image: ghcr.io/valuable-promo/headless:v1.2.8 # {"$imagepolicy": "valuable-promo-prod:valuable-promo-headless"}
+          env:
+            - name: DATABASE_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: db-secret
+                  key: password
           envFrom:
             - secretRef:
                 name: headless-env
             - configMapRef:
                 name: headless-env
----
-apiVersion: image.toolkit.fluxcd.io/v1beta2
-kind: ImageRepository
-metadata:
-  name: valuable-promo-headless
-  namespace: valuable-promo-prod
-spec:
-  image: ghcr.io/valuable-promo/headless
-  interval: 1m0s
----
-apiVersion: image.toolkit.fluxcd.io/v1beta2
-kind: ImagePolicy
-metadata:
-  name: valuable-promo-headless
-  namespace: valuable-promo-prod
-spec:
-  imageRepositoryRef:
-    name: valuable-promo-headless
-  policy:
-    semver:
-      range: '>=0.1.0'
+# ---
+# apiVersion: image.toolkit.fluxcd.io/v1beta2
+# kind: ImageRepository
+# metadata:
+#   name: valuable-promo-headless
+#   namespace: valuable-promo-prod
+# spec:
+#   image: ghcr.io/valuable-promo/headless
+#   interval: 1m0s
+# ---
+# apiVersion: image.toolkit.fluxcd.io/v1beta2
+# kind: ImagePolicy
+# metadata:
+#   name: valuable-promo-headless
+#   namespace: valuable-promo-prod
+# spec:
+#   imageRepositoryRef:
+#     name: valuable-promo-headless
+#   policy:
+#     semver:
+#       range: '>=0.1.0'
