--- a/apps/production/gitops/kustomization.yaml
+++ b/apps/production/gitops/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
   - image-update-automation.yaml
   - alert.yaml
   - provider.yaml
+  - image-policies.yaml
+  - image-repositories.yaml
