--- a/apps/production/gitops/image-repositories.yaml
+++ b/apps/production/gitops/image-repositories.yaml
@@ -16,3 +16,12 @@ metadata:
 spec:
   image: ghcr.io/valuable-promo/revalidator
   interval: 1m0s
+---
+apiVersion: image.toolkit.fluxcd.io/v1beta2
+kind: ImageRepository
+metadata:
+  name: valuable-promo-frontend
+  namespace: valuable-promo-prod
+spec:
+  image: ghcr.io/valuable-promo/frontend
+  interval: 1m0s
