--- a/apps/staging/gitops/image-update-automation.yaml
+++ b/apps/staging/gitops/image-update-automation.yaml
@@ -8,7 +8,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: valuable-promo-infra
-    namespace: flux-system
+    namespace: valuable-promo-staging
   git:
     checkout:
       ref:
@@ -24,5 +24,5 @@ spec:
     push:
       branch: main
   update:
-    path: ./apps
+    path: ./apps/staging
     strategy: Setters
