--- a/apps/staging/gitops/kustomization.yaml
+++ b/apps/staging/gitops/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - sealed-secret.yaml
-  - image-automation.yaml
+  - fluxcd-signing-key.sealed-secret.yaml
+  - image-update-automation.yaml
