--- a/apps/staging/gitops/kustomization.yaml
+++ b/apps/staging/gitops/kustomization.yaml
@@ -2,4 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - fluxcd-signing-key.sealed-secret.yaml
+  - slack-url.sealed-secret.yaml
   - image-update-automation.yaml
+  - alert.yaml
+  - provider.yaml
