--- a/apps/staging/gitops/alert.yaml
+++ b/apps/staging/gitops/alert.yaml
@@ -1,7 +1,7 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta2
 kind: Alert
 metadata:
-  name: on-call-webapp
+  name: slack
   namespace: valuable-promo-staging
 spec:
   summary: valuable-promo-staging
